--- a/HTML/find_drive.html
+++ b/HTML/find_drive.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find A Blood Drive</title>
     <link rel="shortcut icon" href="../images/website-logo.webp" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="/CSS/styleHF.css">
     <link rel="stylesheet" href="../CSS/style3.css">
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +20,17 @@
 
 </head>
 <body>
+    <header>
+        <nav class="nav2">
+            <ul>
+                <a href="/index.html" class="logo">Blood Bank</a>
+                <li><a href="/HTML/donate_blood.html">Donate Blood</a></li>
+                <li><a href="/HTML/host.html">Host a Blood Drive</a></li>
+                <li><a href="/HTML/flex1.html">Biomedical Services</a></li>
+                <li><a href="/HTML/find_drive.html">Find a Blood Drive</a></li>
+            </ul>
+        </nav>
+    </header>
      <div class="contact-in">
         <div class="contact-map"> 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.0386685786175!2d88.34155951479143!3d22.540224185199435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02773ffc967cc3%3A0x3f3b2fbc65680487!2sSSKM%20Hospital%20Blood%20Bank!5e0!3m2!1sen!2sin!4v1658155685015!5m2!1sen!2sin" width="100%" height="350px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
