--- a/HTML/flex1.html
+++ b/HTML/flex1.html
@@ -13,23 +13,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../CSS/styleHF.css">
   <link rel="stylesheet" href="../CSS/style1.css">
 </head>
 
 <body>
   <!-- <div class="container"> -->
-    <nav class="navbar">
-      <ul class="ulnav">
-        <!-- <li><a href="index.html">Home </a></li> -->
-        <li><a href="../index.html" class="logo0">Blood Bank</a></li>
-        <li><h3 id="title0">Blood Product and services</h3></li>
-      </ul>
-      <div class="logo ">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-solid fa-envelope"></i>
-      </div>
-    </nav>
+    <header>
+      <nav class="nav2">
+          <ul>
+              <a href="/index.html" class="logo">Blood Bank</a>
+              <li><a href="/HTML/donate_blood.html">Donate Blood</a></li>
+              <li><a href="/HTML/host.html">Host a Blood Drive</a></li>
+              <li><a href="/HTML/flex1.html">Biomedical Services</a></li>
+              <li><a href="/HTML/find_drive.html">Find a Blood Drive</a></li>
+          </ul>
+      </nav>
+  </header>
     <h1>Blood Products</h1>
     <div class="para">
       <p>We provide hospitals with the following live saving blood products 24 hours a day, 365 days a year.</p>
