--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="/CSS/styleHF.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/styleHF.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <!-- Bootstrap -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"> -->
 
