--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul><marquee id="mar" behavior="" direction="Rights">Welcome To Blood Bank</marquee>
                 
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
-                <li><a href="/HTML/signInForm.html">Sign In</a></li>
+                <li><a href="../HTML/signInForm.html">Sign In</a></li>
                 <li><a href="#">News & Promotion</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
@@ -35,10 +35,10 @@
         <nav class="nav2">
             <ul>
                 <a href="#" class="logo">Blood Bank</a>
-                <li><a href="/HTML/donate_blood.html">Donate Blood</a></li>
-                <li><a href="/HTML/host.html">Host a Blood Drive</a></li>
-                <li><a href="/HTML/flex1.html">Biomedical Services</a></li>
-                <li><a href="/HTML/find_drive.html">Find a Blood Drive</a></li>
+                <li><a href="../HTML/donate_blood.html">Donate Blood</a></li>
+                <li><a href="../HTML/host.html">Host a Blood Drive</a></li>
+                <li><a href="../HTML/flex1.html">Biomedical Services</a></li>
+                <li><a href="../HTML/find_drive.html">Find a Blood Drive</a></li>
             </ul>
         </nav>
     </header>
@@ -59,7 +59,7 @@
                             <input type="submit" name="" value="Donate Now">
                         </div>
                     </div>
-                    <img src="/images/bg.jpg" alt="">
+                    <img src="../images/bg.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -72,21 +72,21 @@
                             <img src="" alt="">
                         </div>
                         <h3>Host a Blood Drive</h3>
-                        <a href="/HTML/host.html">Apply Now</a>
+                        <a href="../HTML/host.html">Apply Now</a>
                     </div>
                     <div class="card">
                         <div class="card-image img-2">
                             <img src="" alt="">
                         </div>
                         <h3>Become a Volunteer</h3>
-                        <a href="/HTML/volunteer.html">Learn More</a>
+                        <a href="../HTML/volunteer.html">Learn More</a>
                     </div>
                     <div class="card">
                         <div class="card-image img-3">
                             <img src="" alt="">
                         </div>
                         <h3>Make a Financial Donation</h3>
-                        <a href="/HTML/donate_blood.html">Donate Now</a>
+                        <a href="../HTML/donate_blood.html">Donate Now</a>
                     </div>
                 </div>
             </div>
