--- a/HTML/find_drive.html
+++ b/HTML/find_drive.html
@@ -9,7 +9,7 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/CSS/styleHF.css">
+    <link rel="stylesheet" href="../CSS/styleHF.css">
     <link rel="stylesheet" href="../CSS/style3.css">
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,11 +23,11 @@
     <header>
         <nav class="nav2">
             <ul>
-                <a href="/index.html" class="logo">Blood Bank</a>
-                <li><a href="/HTML/donate_blood.html">Donate Blood</a></li>
-                <li><a href="/HTML/host.html">Host a Blood Drive</a></li>
-                <li><a href="/HTML/flex1.html">Biomedical Services</a></li>
-                <li><a href="/HTML/find_drive.html">Find a Blood Drive</a></li>
+                <a href="../index.html" class="logo">Blood Bank</a>
+                <li><a href="../HTML/donate_blood.html">Donate Blood</a></li>
+                <li><a href="../HTML/host.html">Host a Blood Drive</a></li>
+                <li><a href="../HTML/flex1.html">Biomedical Services</a></li>
+                <li><a href="../HTML/find_drive.html">Find a Blood Drive</a></li>
             </ul>
         </nav>
     </header>
