--- a/HTML/flex1.html
+++ b/HTML/flex1.html
@@ -22,11 +22,11 @@
     <header>
       <nav class="nav2">
           <ul>
-              <a href="/index.html" class="logo">Blood Bank</a>
-              <li><a href="/HTML/donate_blood.html">Donate Blood</a></li>
-              <li><a href="/HTML/host.html">Host a Blood Drive</a></li>
-              <li><a href="/HTML/flex1.html">Biomedical Services</a></li>
-              <li><a href="/HTML/find_drive.html">Find a Blood Drive</a></li>
+              <a href="../index.html" class="logo">Blood Bank</a>
+              <li><a href="../HTML/donate_blood.html">Donate Blood</a></li>
+              <li><a href="../HTML/host.html">Host a Blood Drive</a></li>
+              <li><a href="../HTML/flex1.html">Biomedical Services</a></li>
+              <li><a href="../HTML/find_drive.html">Find a Blood Drive</a></li>
           </ul>
       </nav>
   </header>
