--- a/HTML/host.html
+++ b/HTML/host.html
@@ -7,8 +7,9 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/CSS/styleHF.css">
-    <link rel="stylesheet" href="/CSS/style6.css">
+    <link rel="stylesheet" href="../CSS/styleHF.css">
+    <link rel="stylesheet" href="../CSS/style6.css">
+    <link rel="shortcut icon" href="../images/website-logo.webp" type="image/x-icon">
 
 
     <title>Hosting A Blood Drive</title>
@@ -18,11 +19,11 @@
     <header>
     <nav class="nav2">
         <ul>
-            <a href="/index.html" class="logo">Blood Bank</a>
-            <li><a href="/HTML/donate_blood.html">Donate Blood</a></li>
-            <li><a href="/HTML/host.html">Host a Blood Drive</a></li>
-            <li><a href="/HTML/flex1.html">Biomedical Services</a></li>
-            <li><a href="/HTML/find_drive.html">Find a Blood Drive</a></li>
+            <a href="../index.html" class="logo">Blood Bank</a>
+            <li><a href="../HTML/donate_blood.html">Donate Blood</a></li>
+            <li><a href="../HTML/host.html">Host a Blood Drive</a></li>
+            <li><a href="../HTML/flex1.html">Biomedical Services</a></li>
+            <li><a href="../HTML/find_drive.html">Find a Blood Drive</a></li>
         </ul>
     </nav>
 </header>
