--- a/HTML/donate_blood.html
+++ b/HTML/donate_blood.html
@@ -31,7 +31,7 @@
     </div>
     <div class="c">
         <h2>Whole Blood Donation</h2>
-        <img src="x.png" alt="b1">
+        <img src="../images/x.png" alt="b1">
         <p>Whole blood is the most flexible type of donation. It can be transfused in its original form, or used to help multiple people when separated into its specific components of red cells, plasma and platelets. Learn more about whole blood donations. </p>
 
             <p> Who it helps: Whole blood is frequently given to trauma patients and people undergoing surgery.</p>
@@ -44,7 +44,7 @@
     </div>
     <div class="d">
         <h2>Power Red Donation</h2>
-        <img src="y.jpg" alt="b2">
+        <img src="../images/y.jpg" alt="b2">
         <p>During a Power Red donation, you give a concentrated dose of red cells, the part of your blood used every day for those needing transfusions as part of their care. This type of donation uses an automated process that separates your red blood cells from the other blood components, and then safely and comfortably returns your plasma and platelets to you.
 
             With just a little extra time at your appointment, you can donate more red cells and increase your impact on patients in need.</p>
@@ -56,7 +56,7 @@
     </div>
     <div class="e">
         <h2>Platelet Donation</h2>
-        <img src="z.jpg" alt="b3">
+        <img src="../images/z.jpg" alt="b3">
         <p>Platelets are tiny cells in your blood that form clots and stop bleeding. Platelets are most often used by cancer patients and others facing life-threatening illnesses and injuries.
 
             In a platelet donation, an apheresis machine collects your platelets along with some plasma, returning your red cells and most of the plasma back to you. A single donation of platelets can yield several transfusable units, whereas it takes about five whole blood donations to make up a single transfusable unit of platelets.
@@ -69,7 +69,7 @@
     </div>
     <div class="f">
         <h2>Plasma Donation</h2>
-        <img src="f.jpeg" alt="b4">
+        <img src="../images/f.jpeg" alt="b4">
         <p>During an AB Elite donation, you give plasma, a part of your blood used to treat patients in emergency situations. AB plasma can be given to anyone regardless of their blood type. Plasma is collected through an automated process that separates plasma from other blood components, then safely and comfortably returns your red blood cells and platelets to you. AB Elite maximizes your donation and takes just a few minutes longer than donating blood.</p>
         <p>Who it helps: AB Plasma is used in emergency and trauma situations to help stop bleeding. </p>
 
